# BulletHellKindaGame

./: .gitignore  CMakeLists.txt  README.md
Components/Entities/: Entities.cpp  Entities.hpp
Components/Entities/Bullets/: Bullets.cpp  Bullets.hpp
Components/Entities/Bullets/Pattern/: Pattern.hpp
Components/Entities/Bullets/Pattern/ShootingPatterns/: ClassicPattern.hpp
Components/Entities/Player/: Player.cpp  Player.hpp
Core/: main.cpp
Core/Context/: GameContext.cpp  GameContext.hpp
Core/Loop/: Game.cpp  Game.hpp
Core/Utility/: Utils.cpp  Utils.hpp
Core/Utility/Collision/: Shape.cpp  Shape.hpp
Logic/: Logic.hpp
Logic/Game/: GameLogic.cpp  GameLogic.hpp
Renderer/: Element.cpp  Element.hpp  Renderer.cpp  Renderer.hpp
Renderer/Canvas/: Canvas.cpp  Canvas.hpp
Renderer/Canvas/Element/: Element.cpp  Element.hpp
